Styling the buttons.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 @import "./base/settings";
 @import "./base/base";
 @import "./base/container";
+@import "./components/button";
 @import "./components/header";
