--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,5 @@
 @import "./base/container";
 @import "./components/button";
 @import "./components/header";
+@import "./components/widget";
+@import "./components/option";
