Finished add option styling.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,7 +1,8 @@
-@import "./base/settings";
+@import "./components/add-option";
 @import "./base/base";
-@import "./base/container";
 @import "./components/button";
+@import "./base/container";
 @import "./components/header";
-@import "./components/widget";
 @import "./components/option";
+@import "./base/settings";
+@import "./components/widget";
