Styling the modal.

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import "./components/button";
 @import "./base/container";
 @import "./components/header";
+@import "./components/modal";
 @import "./components/option";
 @import "./base/settings";
 @import "./components/widget";
