Finished styling modal.

--- a/src/styles/components/_modal.scss
+++ b/src/styles/components/_modal.scss
@@ -1,8 +1,13 @@
+@import "../base/settings";
+
 .ReactModalPortal > div {
   opacity: 0;
 }
 
 .ReactModalPortal .ReactModal__Overlay {
+  align-items: center;
+  display: flex;
+  justify-content: center;
   transition: opacity 200ms ease-in-out;
 }
 
@@ -12,4 +17,24 @@
 
 .ReactModalPortal .ReactModal__Overlay--before-close {
   opacity: 0;
+}
+
+.modal {
+  background: $light-blue;
+  color: white;
+  max-width: 30rem;
+  outline: none;
+  padding: $l-size;
+  text-align: center;
+}
+
+.modal__title {
+  margin: 0 0 $m-size 0;
+}
+
+.modal__body {
+  font-size: 2rem;
+  font-weight: 300;
+  margin: 0 0 $l-size 0;
+  word-break: break-all;
 }
