--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -9,6 +9,7 @@
 
 .add-option {
   display: flex;
+  flex-direction: column;
   padding: $m-size;
 }
 
@@ -18,6 +19,16 @@
   background: $dark-blue;
   color: $off-white;
   flex-grow: 1;
-  margin-right: $s-size;
+  margin: 0 0 $s-size 0;
   padding: $s-size;
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .add-option {
+    flex-direction: row;
+  }
+
+  .add-option__input {
+    margin: 0 $s-size 0 0;
+  }
 }
